# oryx_2012

./: .gitignore  .gitignore_global  99-usb-serial.rules  README.md  oryx_drivemotor_eposparams.dcf  stack.xml
epos_manager/: .cproject  .gitignore  .gitignore~  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  manifest.xml  package.xml
epos_manager/cfg/: Motor.cfg  Motor.cfgc
epos_manager/doc/: manifest.yaml
epos_manager/doc/html/: Definitions_8h.html  Definitions_8h_source.html  EPOS_8cpp.html  EPOS_8cpp_source.html  EPOS_8h.html  EPOS_8h_source.html  EposManagerConfig-usage_8dox.html  EposManagerConfig_8dox.html  EposManager_8cpp.html  EposManager_8cpp__incl.map  EposManager_8cpp__incl.md5  EposManager_8cpp_source.html  ____init_____8py.html  ____init_____8py_source.html  annotated.html  cfg_2____init_____8py.html  cfg_2____init_____8py_source.html  classEPOS-members.html  classEPOS.html  classepos__manager_1_1epos__managerConfig-members.html  classepos__manager_1_1epos__managerConfig.html  classepos__manager_1_1epos__managerConfigStatics-members.html  classepos__manager_1_1epos__managerConfigStatics.html  classepos__manager_1_1epos__managerConfig_1_1AbstractGroupDescription-members.html  classepos__manager_1_1epos__managerConfig_1_1AbstractGroupDescription.html  classepos__manager_1_1epos__managerConfig_1_1AbstractParamDescription-members.html  classepos__manager_1_1epos__managerConfig_1_1AbstractParamDescription.html  classepos__manager_1_1epos__managerConfig_1_1DEFAULT-members.html  classepos__manager_1_1epos__managerConfig_1_1DEFAULT.html  classepos__manager_1_1epos__managerConfig_1_1GroupDescription-members.html  classepos__manager_1_1epos__managerConfig_1_1GroupDescription.html  classepos__manager_1_1epos__managerConfig_1_1ParamDescription-members.html  classepos__manager_1_1epos__managerConfig_1_1ParamDescription.html  classes.html  epos__managerConfig-usage_8dox.html  epos__managerConfig_8dox.html  epos__managerConfig_8h.html  epos__managerConfig_8h_source.html  epos__managerConfig_8py.html  epos__managerConfig_8py_source.html  (+36 more)
epos_manager/include/EposManager/: EPOS.h
epos_manager/launch/: Motors.launch  NewTest.launch
epos_manager/msg_gen/lisp/: EPOSControl.lisp  GroupEPOSControl.lisp  GroupMotorInfo.lisp  MotorInfo.lisp  _package.lisp  _package_EPOSControl.lisp  _package_GroupMotorInfo.lisp  _package_MotorInfo.lisp  epos_manager-msg.asd
epos_manager/params/: New_Motor.yaml
epos_manager/src/: EPOS.cpp  EposManager.cpp
oryx_diagnostics/: .gitignore  CMakeLists.txt  cmake_install.cmake  mainpage.dox  manifest.xml  package.xml
oryx_diagnostics/devel/: .catkin  .rosinstall  env.sh  setup.bash  setup.sh  setup.zsh
oryx_diagnostics/doc/: manifest.yaml
oryx_diagnostics/doc/html/: 05_8catkin-test-results_8sh_8develspace_8context_8py.html  05_8catkin-test-results_8sh_8develspace_8context_8py_source.html  DiagnosticsCommand_8h.html  DiagnosticsCommand_8h__dep__incl.map  DiagnosticsCommand_8h__dep__incl.md5  DiagnosticsCommand_8h__incl.md5  DiagnosticsCommand_8h_source.html  DiagnosticsManager_8cpp.html  DiagnosticsManager_8cpp__incl.map  DiagnosticsManager_8cpp__incl.md5  DiagnosticsManager_8cpp_source.html  DiagnosticsManager_8h.html  DiagnosticsManager_8h__dep__incl.map  DiagnosticsManager_8h__dep__incl.md5  DiagnosticsManager_8h__incl.map  DiagnosticsManager_8h__incl.md5  DiagnosticsManager_8h_source.html  NodeManager_8cpp.html  NodeManager_8cpp__incl.map  NodeManager_8cpp__incl.md5  NodeManager_8cpp_source.html  NodeManager_8h.html  NodeManager_8h__dep__incl.map  annotated.html  (+177 more)
oryx_diagnostics/gtest/: Makefile
oryx_diagnostics/include/: DiagnosticsManager.h
oryx_diagnostics/srv/: DiagnosticsCommand.srv  DiagnosticsRegistration.srv
oryx_manager/: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  manifest.xml  manifest.xml~  package.xml
oryx_manager/cfg/: ArmManager.cfg  ArmManager.cfgc  DriveManager.cfg  DriveManager.cfgc  IMU.cfg  IMU.cfgc  OryxManager.cfg  OryxManager.cfgc  PTZManager.cfg  PTZManager.cfgc
oryx_manager/doc/: manifest.yaml
oryx_manager/docs/: IMUConfig-usage.dox  IMUConfig.dox  IMUConfig.wikidoc  PTZ_managerConfig-usage.dox  PTZ_managerConfig.dox  PTZ_managerConfig.wikidoc  arm_managerConfig-usage.dox  arm_managerConfig.dox  arm_managerConfig.wikidoc  drive_managerConfig-usage.dox  drive_managerConfig.dox  drive_managerConfig.wikidoc  oryx_managerConfig-usage.dox  oryx_managerConfig.dox  oryx_managerConfig.wikidoc
oryx_manager/include/: DriveManager.h  OryxManager.h  PtzManager.h
oryx_manager/launch/: Oryx.launch  OryxArm.launch  OryxArmValgrind.launch  OryxDrive.launch  OryxDriveValgrind.launch  OryxPtz.launch  OryxPtzValgrind.launch  SystemDiagnostics.launch
oryx_msgs/: CMakeLists.txt  cmake_install.cmake  manifest.xml  package.xml
oryx_msgs/devel/: .catkin  .rosinstall  env.sh  setup.bash  setup.sh  setup.zsh
oryx_msgs/gtest/: Makefile
oryx_msgs/msg/: Heartbeat.msg
oryx_msgs/srv/: DiagnositicsRegistration.srv
oryx_network_manager/: .cproject  .gitignore  .project  .pydevproject  CMakeLists.txt  cmake_install.cmake  config.txt  mainpage.dox  manifest.xml  package.xml
oryx_network_manager/doc/: manifest.yaml
oryx_network_manager/launch/: network_manager.launch
oryx_network_manager/msg/: ActiveNetworkConnection.msg  ActiveNetworkConnections.msg  NetworkConnection.msg  NetworkConnections.msg  NetworkDevice.msg  NetworkDevices.msg
oryx_network_manager/src/: .gitignore  ActivateConnectionService.cpp  ActivateConnectionService.h  ActiveNetworkConnectionManager.cpp  ActiveNetworkConnectionManager.h  MessageUtil.h  NetworkConfigurationManager.cpp  NetworkConfigurationManager.h  NetworkConnectionManager.cpp  NetworkConnectionManager.h  NetworkDeviceManager.cpp  NetworkDeviceManager.h  NetworkManagerCLI.cpp  NetworkManagerConfig.h  NetworkManagerServer.cpp  NetworkManagerUI.cpp  NetworkManagerUtil.h  NetworkSettings.h
oryx_network_manager/srv/: ActivateConnection.srv  GetActiveNetworkConnections.srv  GetNetworkConnections.srv  GetNetworkDevices.srv
(+1240 files in other folders)
