<package>
  <name>oryx_msgs</name>
  <version>1.0.0</version>
  <description>

     Core Oryx Message Definitions used throughout the Oryx code

  </description>
  <maintainer email="robot@wpi.edu">RIVeR Lab</maintainer>
  <license>BSD</license>
  <url>http://robot.wpi.edu/wiki/Oryx/oryx_msgs</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


