<package>
  <name>oryx_network_manager</name>
  <version>1.0.0</version>
  <description>
    A program which monitors a system's network connections and automatically makes connections
  </description>
  <author email="mwills@wpi.edu">Mitchell Wills</author>
  <maintainer email="robot@wpi.edu">WPI RIVeR Lab</maintainer>
  <license>?</license>
  <url>http://ros.org/wiki/oryx_network_manager</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


